// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionTooltip should render custom tooltip when focus the children 1`] = `
<div
  aria-describedby={42}
  ariaLabel="a custom tooltip"
  className="theme-tc-tooltip"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  <div
    aria-describedby={42}
  >
    Action
  </div>
</div>
`;

exports[`ActionTooltip should render only the children 1`] = `
<div
  aria-describedby={42}
  className="theme-tc-tooltip"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  <div
    aria-describedby={42}
  >
    Action
  </div>
</div>
`;

exports[`ActionTooltip should render tooltip when focus the children 1`] = `
<div
  aria-describedby={42}
  className="theme-tc-tooltip"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  <div
    aria-describedby={42}
  >
    Action
  </div>
</div>
`;

exports[`ActionTooltip should render tooltip when hover the children 1`] = `
<div
  aria-describedby={42}
  className="theme-tc-tooltip"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyPress={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  <div
    aria-describedby={42}
  >
    Action
  </div>
</div>
`;
